--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     }
     .answers li {
       display: inline-block;
-      margin: 0 40px;
+      margin: 0 20px;
     }
     .answers a {
       width: 150px;
@@ -57,6 +57,9 @@
       background-size: cover;
       display: inline-block;
       border: 10px solid #fff;
+    }
+    a:hover {
+      border-color: #EB974E;
     }
     a.ryan {
       background-position: 100%;
@@ -80,6 +83,7 @@
         <li><a class="" style="background-image: url(adii.jpg)" href="#"></a></li>
         <li><a class="ryan" style="background-image: url(ryan.jpg)" href="#"></a></li>
         <li><a class="" style="background-image: url(nathank.png)" href="#"></a></li>
+        <li><a class="" style="background-image: url(jon.png)" href="#"></a></li>
         <li><a class="" style="background-image: url(nathanb.png)" href="#"></a></li>
       </ul>
     </section>
