Update link to Jon's post

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <p>Founder,<br>Draft</p>
         </li>
         <li>
-          <a class="" style="background-image: url(jon.png)" href="#" target="blank"></a>
+          <a class="" style="background-image: url(jon.png)" href="https://medium.com/lets-make-things/a23254f8b75e" target="blank"></a>
           <h3>Jon Gold</h3>
           <p>Designer/Hacker,<br>MakeShift</p>
         </li>
