--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <p>Co-Founder,<br>WooThemes</p>
         </li>
         <li>
-          <a class="ryan" style="background-image: url(ryan.jpg)" href="#" target="blank"></a>
+          <a class="ryan" style="background-image: url(ryan.jpg)" href="http://ryanhoover.me/post/49179929021/be-selfish" target="blank"></a>
           <h3>Ryan Hoover</h3>
           <p>Director of Product,<br>PlayHaven</p>
         </li>
